fix(build): 修复构建配置和代码错误 - 添加shared模块配置文件，修正模块引用路径和类型错误

--- a/shared/src/main/module.json5
+++ b/shared/src/main/module.json5
@@ -5,9 +5,7 @@
     "deviceTypes": [
       "phone",
       "car",
-      "watch"
-    ],
-    "deliveryWithInstall": true,
-    "installationFree": false
+      "wearable"
+    ]
   }
 }
