--- a/watch/src/main/module.json5
+++ b/watch/src/main/module.json5
@@ -12,8 +12,8 @@
     "pages": "$profile:main_pages",
     "abilities": [
       {
-        "name": "EntryAbility",
-        "srcEntry": "./ets/entryability/EntryAbility.ets",
+        "name": "WatchAbility",
+        "srcEntry": "./ets/entryability/WatchAbility.ets",
         "description": "$string:EntryAbility_desc",
         "icon": "$media:layered_image",
         "label": "$string:EntryAbility_label",
